# myTutorials

./: '  .gitignore
Algorithms/book_macros_rs/: Cargo.toml
Algorithms/book_macros_rs/dummy_proc/: Cargo.toml
Algorithms/book_macros_rs/src/: lib.rs  main.rs
Algorithms/book_manylists_rs/: Cargo.toml
Algorithms/book_manylists_rs/src/: a_bad_singly_linked_stack.rs  b_ok_singly_linked_stack.rs  c_persistent_singly_linked_stack.rs  d_bad_safe_deque.rs  e_ok_safe_deque.rs  f_production_unsafe_deque.rs  lib.rs
Algorithms/proc_getters_rs/: Cargo.toml
Algorithms/proc_getters_rs/examples/: basic.rs
Algorithms/proc_getters_rs/src/: getters.rs  lib.rs
Algorithms/redblob_pathfinder_py/: pyproject.toml
Algorithms/redblob_pathfinder_py/data/: graphs.json
Algorithms/redblob_pathfinder_py/pathfinder/: __main__.py  breadth_fst.py  dijkstra_algorithm.py  graph_utils.py
Algorithms/unsafe_nbody/: Cargo.toml  justfile
Algorithms/unsafe_nbody/nbody_c/: nbody.gcc-8.c  nbody.gcc-8.clang.out  nbody.gcc-8.gcc.out
BackEnd/py_wagptbot/: TODO.md  mkdocs.yml  pendientes.md  pyproject.toml
BackEnd/py_wagptbot/docs/: about.md
BackEnd/py_wagptbot/site/: 404.html  index.html  search.html
BackEnd/py_wagptbot/site/about/: index.html
BackEnd/py_wagptbot/site/search/: search_index.json
BackEnd/py_wagptbot/wabotgpt/: __main__.py  app.py  models.py  utils.py
BackEnd/rsbook-wasmconway/: Cargo.toml  LICENSE_MIT  reload.sh
BackEnd/rsbook-wasmconway/src/: lib.rs
BackEnd/rsbook-wasmconway/www/: index.html  index.js  package-lock.json  package.json
BackEnd/rsbook_server/: Cargo.toml  hello.html
BackEnd/rsbook_server/src/: main.rs
BackEnd/supabase/: supabase.md
BackEnd/tokio_redis/: Cargo.toml
Blockchain/dappazon/: package.json
Blockchain/dappazon/cache/: solidity-files-cache.json
Blockchain/dappazon/contracts/: Lock.sol
Blockchain/go_blockchain/: README.md  diff.txt  gocar.toml
Blockchain/go_blockchain/src/: main.go
Blockchain/rs_lgblockchain/: Cargo.toml
Blockchain/rs_lgblockchain/benches/: hashing.rs
Blockchain/rs_lgblockchain/src/: .blockchain.rs.rustfmt  blockchain.rs  lib.rs  main.rs  p2p.rs  utils.rs
Blockchain/vara_academy/: Justfile  gear.Dockerfile
Blockchain/vara_academy/hello-world/: Cargo.toml  build.rs
Blockchain/vara_academy/hello-world/io/: Cargo.toml
Blockchain/vara_academy/hello-world/io/src/: lib.rs
Blockchain/vara_academy/hello-world/src/: contract.rs  lib.rs
Blockchain/vara_academy/hello-world/state/: Cargo.toml
Blockchain/vara_academy/hello-world/state/src/: lib.rs
Blockchain/vara_academy/hello-world/tests/: test_hello.rs  test_hello_world.rs
Blockchain/vara_academy/hw/: Cargo.toml
CliApps/: create_project.py
CliApps/cli_ansi/: pyproject.toml
CliApps/cli_ansi/cli_ansi/: print_allcolors.py
CliApps/cli_ansi/tests/: test_cli_ansi.py
CliApps/cookbook_rs/: Cargo.toml
CliApps/ferrous-training/async-chat/: Cargo.toml
CliApps/ferrous-training/connected-mailbox/: Cargo.toml
CliApps/ferrous-training/rustlatin/: Cargo.toml
CliApps/myapp/: Cargo.toml
CliApps/todoapp_ex/: .gitignore  README.md  mix.exs
CliApps/todoapp_py/: pyproject.toml
CliApps/todoapp_py/tests/: test_todoapp.py
CliApps/todoapp_py/todoapp/: __init__.py  __main__.py  app.py  cli.py  config.py  database.py
CliApps/too_many_lists/: Cargo.toml
CliApps/too_many_lists/examples/: first.rs
CliApps/too_many_lists/src/: fst_bad_singlylinked_stack.rs  lib.rs
CliApps/tui_example_rs/: Cargo.toml
CliApps/tui_example_rs/data/: db.json
CliApps/tui_example_rs/src/: main.rs
DApps/quadratic_voting_app/: .secret  README.md  package-lock.json  package.json  tailwind.config.js  truffle-config.js
DApps/quadratic_voting_app/contracts/: QuadraticVoting.sol
DApps/quadratic_voting_app/migrations/: 2_quadratic_voting.js
DApps/quadratic_voting_app/src/: App.vue
DApps/quadratic_voting_app/test/: quadratic-voting-test.js
Langs/c_lisp/: Makefile  deps.sh
Langs/c_lisp/src/: lib.c  lib.h  main.c  polish.h  polish_grammar.txt
Langs/rustylisp/: Cargo.toml
Langs/rustylisp/.cargo/: config.toml
Langs/rustylisp/examples/calculator/: Cargo.toml
Langs/rustylisp/examples/calculator/src/: calculator.pest  csv.pest  lib.rs  main.rs
Langs/rustylisp/src/: example.pest  main.rs
PythonLibs/: ip_address.py
WebDev/JS_Cryptex/: index.html
WebDev/TS_Cardsholder/: index.html  tsconfig.json
WebDev/TS_Cardsholder/css/: styles.css
WebDev/VUE_OnlineCourseApp/: package-lock.json  package.json
WebDev/VUE_laravelcrud/: .env  README.md  package-lock.json  package.json
WebDev/WEB_SpaceInvaders/: index.html  package-lock.json  package.json  tsconfig.json
WebDev/react-tictac/: package.json
WebDev/supabase-react/: .env.local  package.json
(+86 files in other folders)
