[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "pathfinder.__main__:main"
jupyter = "python -m jupyter notebook --no-browser"
