[package]
name = "lgblockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
libp2p = { version = "0.52.1", features = ["mdns", "tcp", "tokio", "floodsub", "macros", "noise"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
once_cell = "1.18.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
pretty_assertions = "1.3.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hashing"
harness = false
