[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.19"
ratatui = { version = "0.21.0", features = ["macros"] }
tokio = { version = "1.29.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time", "fs"] }
tui-logger = { version = "0.9.2", features = ["ratatui", "ratatui-support"] }

