[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Danyiel Colin <danyiel5978@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.5.0"
colorama = "^0.4.5"
shellingham = "^1.4.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
usbburn = "todoapp.__main__:main"
