[package]
name = "hello-world"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
hello-world-io.workspace = true

[dev-dependencies]
gtest.workspace = true

[build-dependencies]
hello-world-io.workspace = true
gear-wasm-builder.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Danyiel Colin <danyiel5978@gmail.com>"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
hello-world-io = { path = "io" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }


