[package]
name = "hello-world-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
hello-world-io.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }
