[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "11.0.0"
pest = "2.5.6"
pest_derive = "2.5.6"
anyhow = "1.0.69"
thiserror = "1.0.39"
colored = "2.0.0"
lazy_static = "1.4.0"

[features]
with-file-history = []
